haskell-logic (0.43) unstable; urgency=low

  * Move Propositional modules into Data.Logic.Propositional.
  * Add a Native instance for PropositionalFormula.
  * Add a Normal in the Propositional directory

 -- David Fox <dsf@seereason.com>  Thu, 29 Sep 2011 05:56:41 -0700

haskell-logic (0.42) unstable; urgency=low

  * Derive the show instance for ImplicativeNormalForm rather than
    making a custom one.

 -- David Fox <dsf@seereason.com>  Fri, 23 Sep 2011 16:43:09 -0700

haskell-logic (0.41) unstable; urgency=low

  * Add field accessors to Proof type.
  * Finish show implementation for Proof

 -- David Fox <dsf@seereason.com>  Mon, 08 Aug 2011 08:32:56 -0700

haskell-logic (0.40) unstable; urgency=low

  * Remove NoProof constructor from Proof type - we only need this in
    the augumented Proof' type in the ontology package.
  * Add prettyProof and prettyINF to Data.Logic.Pretty.

 -- David Fox <dsf@seereason.com>  Sat, 06 Aug 2011 06:28:20 -0700

haskell-logic (0.39) unstable; urgency=low

  * Move Proof type from ontology to logic.

 -- David Fox <dsf@seereason.com>  Thu, 04 Aug 2011 07:13:00 -0700

haskell-logic (0.38) unstable; urgency=low

  * Remove the triple of function parameters for converting formulas to
    literals, these were all invariably id.

 -- David Fox <dsf@seereason.com>  Tue, 02 Aug 2011 07:34:54 -0700

haskell-logic (0.37) unstable; urgency=low

  * Add an Ord instance to ProofResult so we can insert proofs into sets.

 -- David Fox <dsf@seereason.com>  Mon, 01 Aug 2011 09:51:59 -0700

haskell-logic (0.36) unstable; urgency=low

  * Move module Test.Types to Data.Logic.Test and export so that clients
    of this package can use the definitions to create test cases.

 -- David Fox <dsf@seereason.com>  Sun, 24 Jul 2011 10:45:50 -0700

haskell-logic (0.35) unstable; urgency=low

  * Remove the Pretty class.  Pretty printing of a type is application
    specific, so the type class doesn't make sense.  Instead add function