@@ -3,6 +3,7 @@ haskell-logic (0.43) unstable; urgency=low
   * Move Propositional modules into Data.Logic.Propositional.
   * Add a Native instance for PropositionalFormula.
   * Add a Normal in the Propositional directory
+  * Add clauseNormalForm and disjunctiveNormalForm for Propositional
 
  -- David Fox <dsf@seereason.com>  Thu, 29 Sep 2011 05:56:41 -0700
 
